# PhotometryTK

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  INSTALL.isis  README  THIRDPARTYLICENSES
src/photk/: Albedo.cc  Albedo.h  AlbedoAccumulators.h  BBoxIterator.h  CMakeLists.txt  Camres.cc  Camres.h  Common.cc  Common.h  ErrorAccumulators.h  Exposure.cc  Exposure.h  ImageAccumulators.h  Index.cc  Index.h  Macros.h  Misc.cc  Misc.h  Outlier.cc  Outlier.h  Photometry.h  PlateCommon.cc  PlateCommon.h  ProjectFile.proto  ProjectService.h  Reconstruct.cc  Reconstruct.h  ReconstructError.cc  ReconstructError.h  Reflectance.cc  Reflectance.h  RemoteProjectFile.cc  Shadow.cc  Shadow.h  Shape.cc  Shape.h  ShapeFromShading.cc  ShapeFromShading.h  TimeAccumulators.h  Weights.cc  (+2 more)
src/photk/tests/: CMakeLists.txt  TestAlbedo.cxx  TestBBoxIterator.cxx  TestCommon.cxx  TestFullIteration.cxx  TestProjectFileIO.cxx  TestProjectService.cxx  TestTimeAccumulators.cxx  demimg_iter1_int_gold.tif  demrefl_iter1_int_gold.tif  photometry_settings_1.txt  photometry_settings_2.txt  photometry_settings_4.txt
src/photk/tests/DEM_tiles_sub64/: apollo_dem_1024ppd_12E_2N.tif  apollo_dem_1024ppd_12E_6S.tif  apollo_dem_1024ppd_4E_2N.tif  apollo_dem_1024ppd_4E_6S.tif  apollo_dem_1024ppd_4W_2N.tif  apollo_dem_1024ppd_4W_6S.tif  index.txt
src/photk/tests/DIM_input_1280mpp_masked/: AS15-M-0073.tif  AS16-M-0164.tif  AS16-M-0165.tif  AS16-M-0168.tif  AS16-M-0169.tif  AS16-M-0442.tif  AS16-M-0443.tif  AS16-M-0444.tif  AS16-M-0445.tif  AS16-M-0446.tif  AS16-M-0447.tif  AS16-M-0978.tif  AS16-M-0979.tif  AS16-M-0980.tif  AS16-M-0981.tif  AS16-M-0982.tif  AS16-M-0983.tif  AS16-M-0984.tif  AS16-M-0985.tif  AS16-M-1268.tif  AS16-M-1271.tif  AS16-M-1272.tif  AS16-M-1275.tif  AS16-M-1661.tif  AS16-M-1662.tif  AS16-M-1665.tif  AS16-M-1666.tif  AS16-M-1669.tif  AS16-M-1959.tif  AS16-M-1960.tif  AS16-M-1961.tif  AS16-M-1962.tif  AS16-M-1963.tif  AS16-M-1964.tif  AS16-M-2184.tif  AS16-M-2185.tif  AS16-M-2188.tif  AS16-M-2189.tif  AS16-M-2799.tif  AS16-M-2800.tif  (+14 more)
src/photk/tests/DIM_input_2560mpp/: AS15-M-0073.tif  AS16-M-0164.tif  AS16-M-0165.tif  AS16-M-0168.tif  AS16-M-0169.tif  AS16-M-0442.tif  AS16-M-0443.tif  AS16-M-0444.tif  AS16-M-0445.tif  AS16-M-0446.tif  AS16-M-0447.tif  AS16-M-0978.tif  AS16-M-0979.tif  AS16-M-0980.tif  AS16-M-0981.tif  AS16-M-0982.tif  AS16-M-0983.tif  AS16-M-0984.tif  AS16-M-0985.tif  AS16-M-1268.tif  AS16-M-1271.tif  AS16-M-1272.tif  AS16-M-1275.tif  AS16-M-1661.tif  AS16-M-1662.tif  AS16-M-1665.tif  AS16-M-1666.tif  AS16-M-1669.tif  AS16-M-1959.tif  AS16-M-1960.tif  AS16-M-1961.tif  AS16-M-1962.tif  AS16-M-1963.tif  AS16-M-1964.tif  AS16-M-2184.tif  AS16-M-2185.tif  AS16-M-2188.tif  AS16-M-2189.tif  AS16-M-2799.tif  AS16-M-2800.tif  (+15 more)
src/photk/tests/albedo_gold_1/: DEMTilesList.txt  albedoTilesList.txt  imagesList.txt  tilesList.txt  tilesVrt.tif
src/photk/tests/albedo_gold_1/DEM/: tile_0E12S.tif  tile_0E4S.tif  tile_0E8S.tif  tile_12E12S.tif  tile_12E4S.tif  tile_12E8S.tif  tile_4E12S.tif  tile_4E4S.tif  tile_4E8S.tif  tile_4W12S.tif  tile_4W4S.tif  tile_4W8S.tif  tile_8E12S.tif  tile_8E4S.tif  tile_8E8S.tif
src/photk/tests/albedo_gold_1/albedo/: tile_4E8S.tif  tile_4E8S.tif.aux.xml  tile_8E8S.tif
src/photk/tests/albedo_gold_1/albedo_sub4/: albedo_sub4.kml  tile_4E8S.tif  tile_8E8S.tif
src/photk/tests/albedo_gold_1/blank_tiles/: tile_0E12S.tif  tile_0E4S.tif  tile_0E8S.tif  tile_12E12S.tif  tile_12E4S.tif  tile_12E8S.tif  tile_4E12S.tif  tile_4E4S.tif  tile_4E8S.tif  tile_4W12S.tif  tile_4W4S.tif  tile_4W8S.tif  tile_8E12S.tif  tile_8E4S.tif  tile_8E8S.tif
src/photk/tests/albedo_gold_1/costFun/: tile_0E12S.txt  tile_0E4S.txt  tile_0E8S.txt  tile_12E4S.txt  tile_12E8S.txt  tile_4E12S.txt  tile_4E4S.txt  tile_4E8S.txt  tile_4W12S.txt  tile_4W4S.txt  tile_4W8S.txt  tile_8E12S.txt  tile_8E4S.txt  tile_8E8S.txt
src/photk/tests/albedo_gold_1/error/: tile_4E8S.tif  tile_8E8S.tif
src/photk/tests/albedo_gold_1/exposure/: AS16-M-0164_exposure.txt  AS16-M-0165_exposure.txt  AS16-M-0168_exposure.txt  AS16-M-0169_exposure.txt  AS16-M-0442_exposure.txt  AS16-M-0443_exposure.txt  AS16-M-0444_exposure.txt  AS16-M-0445_exposure.txt  AS16-M-0446_exposure.txt  AS16-M-0447_exposure.txt  AS16-M-0978_exposure.txt  AS16-M-0979_exposure.txt  AS16-M-0980_exposure.txt  AS16-M-0981_exposure.txt  AS16-M-0982_exposure.txt  AS16-M-0983_exposure.txt  AS16-M-0984_exposure.txt  AS16-M-0985_exposure.txt  AS16-M-1268_exposure.txt  AS16-M-1271_exposure.txt  AS16-M-1272_exposure.txt  AS16-M-1275_exposure.txt  AS16-M-1661_exposure.txt  AS16-M-1662_exposure.txt  AS16-M-1665_exposure.txt  AS16-M-1666_exposure.txt  AS16-M-1669_exposure.txt  AS16-M-1959_exposure.txt  AS16-M-1960_exposure.txt  AS16-M-1961_exposure.txt  AS16-M-1962_exposure.txt  AS16-M-1963_exposure.txt  AS16-M-1964_exposure.txt  AS16-M-2184_exposure.txt  AS16-M-2185_exposure.txt  AS16-M-2188_exposure.txt  AS16-M-2189_exposure.txt  AS16-M-2799_exposure.txt  AS16-M-2800_exposure.txt  AS16-M-2801_exposure.txt  (+13 more)
src/photk/tests/albedo_gold_1/phase/: phaseCoeffs.txt  tile_0E12S.txt  (+13 more)
src/photk/tests/albedo_gold_2/: DEMTilesList.txt  albedoTilesList.txt  imagesList.txt  tilesList.txt  tilesVrt.tif
src/photk/tests/meta/: spacecraftpos.txt  spacecraftpos_postbundleadjust.txt_old  spacecraftpos_prebundleadjust.txt  sunpos.txt  sunpos.txt_old  sunpos.txt_orig
src/tools/: CMakeLists.txt  dem_mosaic.cc  get_sun_or_spacecraft_position.pl  mipmap.cc  orthoproject_cube.sh  orthoproject_cube_parallel.sh  phodrg2plate.cc  phoinitet.cc  phoinitfile.cc  phoitalbedo.cc  phoitdem.cc  phoitnorm.cc  phoitreflect.cc  phoittime.cc  photometry_settings.example.txt  ptk_server.cc  reconstruct.cc  reconstruct.sh  reconstruct_aux.cc  sfs.cc
src_plate_old/photk/: CMakeLists.txt  Common.h  ProjectFileIO.h  ProjectService.cc  RecursiveBBoxAccumulator.h  RemoteProjectFile.cc  RemoteProjectFile.h  TimeAccumulators.h
src_plate_old/photk/tests/: CMakeLists.txt  TestAlbedoAccumulators.cxx  TestCommon.cxx  TestErrorAccumulators.cxx  TestPlateCommon.cxx  TestRecursiveBBoxAccumulator.cxx
(+146 files in other folders)
